Completes Issue #19 , and makes us ready to go live on shift trading!

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -843,3 +843,9 @@ input#TradeFromUserId, .ui-widget ul#tags {
 	float: left;
 	clear: none;
 }
+
+div.checkbox {
+	float:left;
+	clear:none;
+}
+}
